--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "jest-styled-components": "^7.0.3",
+    "lorem-ipsum": "^2.0.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
