--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "start": "nodemon server/index.js",
     "seed": "node seed",
-    "k6": "k6 run k6.script.js"
+    "k6": "k6 run K6.script.js",
+    "k6-post": "k6 run K6.post.script.js"
   },
   "author": "Blake",
   "license": "ISC",
